Switches to jQuery Zoom for listing images. - changes the non-zoomed image to an image object and adds the required styles so the image will be sized correctly and align with the zoomed image when its smaller than the containing parent. - some clean up in the render - changed the photoSection ID to a class, so it didn't override the hide class. - moved trumboqyg in package.json from dev dependencies to regular dependencies

--- a/styles/modules/modals/_listingDetail.scss
+++ b/styles/modules/modals/_listingDetail.scss
@@ -34,12 +34,18 @@
         }
       }
 
-      #photoSection {
+      .photoSection {
         height: 701px;
 
         .photoSelected {
           height: 100%;
           cursor: pointer;
+
+          .photoSelectedInner {
+            max-width: 100%;
+            max-height: 100%;
+            display: block;
+          }
         }
 
         .photoPrev,
